# runseal

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/workflows/: ci.yml  pages.yml  release.yml
adversarial/cases/: rfc0016-initial.json
adversarial/schemas/: adversarial-case.schema.json  adversarial-result.schema.json
docs/: index.html  styles.css
docs/security/: 2026-07-windows-contained-network-adversarial-report.md
examples/stdio-json-rpc/: README.md  runseal_stdio_example.py
scripts/: build-windows.ps1  portable-probe-smoke.py  windows-smoke.ps1
src/: audit.rs  backend.rs  cli.rs  control.rs  duration.rs  error.rs  events.rs  lib.rs  main.rs  policy.rs  process_output.rs  rpc.rs  setup.rs  stdin.rs  windows_plan.rs  windows_policy.rs  windows_vendor_adapter.rs
src/backend/: capability.rs  core.rs  error.rs  execution.rs  filesystem.rs  managed_proxy.rs  mod.rs  plan.rs  policy_epoch.rs  process.rs  registry.rs  runtime.rs  skeleton.rs  tests.rs  windows.rs
src/commands/: capabilities.rs  exec.rs  explain_policy.rs  mcp.rs  mod.rs  setup.rs  version.rs
src/execution/: engine.rs  errors.rs  mod.rs  output.rs  paths.rs
src/linux/: bubblewrap.rs  capability_probe.rs  mod.rs
src/macos/: capability_probe.rs
src/protocol/: error_payload.rs  mod.rs  request_validation.rs  rpc_handler.rs
src/service/: event_bus.rs  executions.rs  mod.rs  policy_epoch.rs  request_validation.rs  sessions.rs  setup_readiness.rs  state.rs  transport.rs
src/windows/: mod.rs  policy.rs  vendor_adapter.rs
tests/: README.md  adversarial_case_manifest.rs  adversarial_harness.rs  cli_contract.rs  filesystem_conformance.rs  mcp_contract.rs  protocol_contract.rs  vendor_boundary.rs
tests/adversarial/: README.md
