[package]
name = "runseal"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "OS-native sandbox layer and stable execution protocol for AI agents"
repository = "https://github.com/runseal-labs/runseal"
publish = false

[workspace]
members = ["."]

[dependencies]
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
anyhow = "1"
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
