[package]
name = "runseal"
version = "0.1.9"
edition = "2024"
license = "Apache-2.0"
description = "OS-native sandbox layer and stable execution protocol for AI agents"
repository = "https://github.com/runseal-labs/runseal"
publish = false

[lints]
workspace = true

[workspace]
members = ["."]
exclude = [
    "vendor/codex-otel",
    "vendor/codex-protocol",
    "vendor/codex-utils-absolute-path",
    "vendor/codex-utils-pty",
    "vendor/codex-utils-string",
    "vendor/codex-windows-sandbox/upstream",
]

[workspace.lints]
rust = {}

[workspace.lints.clippy]
await_holding_invalid_type = "deny"
await_holding_lock = "deny"
expect_used = "deny"
identity_op = "deny"
manual_clamp = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_flatten = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_retain = "deny"
manual_strip = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"
needless_question_mark = "deny"
needless_update = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
redundant_static_lifetimes = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
unnecessary_filter_map = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_sort_by = "deny"
unnecessary_to_owned = "deny"
unwrap_used = "deny"

[dependencies]
base64 = "0.22"
getrandom = "0.4"
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }

[dev-dependencies]
anyhow = "1"
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"

[target."cfg(windows)".dependencies]
codex-protocol = { path = "vendor/codex-protocol" }
codex-utils-absolute-path = { path = "vendor/codex-utils-absolute-path" }
codex-windows-sandbox = { path = "vendor/codex-windows-sandbox/upstream" }
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[target."cfg(unix)".dependencies]
libc = "0.2"
